--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body{
   letter-spacing: 1px;
   word-spacing: 2px
 }
-h1{
+h2{
   text-align: center;
 }
 .name {
@@ -16,12 +16,14 @@ h1{
   background-color: #ffffff;
   font-size: 40px;
   letter-spacing: 1px;
-  background-image: url(Save the Trees.png);
+  background-image: url("");
   background-size: 100%;
 }
 .current{
   color:#ffffff;
   background-color: #8585ad;
+  text-align: justify;
+  font-size: 20px;
 }
 .marine{
   text-shadow: 2px 2px 5px #000000;
@@ -34,6 +36,10 @@ img{
   border-radius: 25px;
   width: 40%;
   height:40%;
+}
+.a{
+  font-size: 20px;
+  text-align: justify;
 }
 a:link, a:visited {
   background-color: white;
