--- a/index.css
+++ b/index.css
@@ -57,3 +57,58 @@ a:hover, a:active {
   color:#ffffff;
   background-color:#8585ad;
 }
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.dropbtn {
+  background-color: #ffffff;
+  color: #8585ad;
+  padding: 10px 20px;
+  font-size: 20px;
+  border: 2px solid #8585ad;
+  font-family:"Times New Roman", Times, serif;
+
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #8585ad;
+  min-width: 160px;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color:#8585ad ;
+  padding: 10px 20px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #8585ad;
+color: #ffffff}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #8585ad;
+  color: #ffffff
+}
