--- a/aboutme.css
+++ b/aboutme.css
@@ -5,7 +5,6 @@ body{
   font-size: 25px;
   letter-spacing: 1px;
   word-spacing: 2px;
-  background-image:image("");
 }
 .a{
   font-size: 20px;
@@ -17,9 +16,10 @@ img{
   margin-left: auto;
   margin-right: auto;
   align-items: center;
-  border-radius: 50px;
-  width: 25%;
-  height:25%;
+  border-radius: 100px;
+  width: 250px;
+  height: auto;
+
 }
 
 a:link, a:visited {
@@ -35,4 +35,35 @@ a:link, a:visited {
 a:hover, a:active {
   color:#ffffff;
   background-color:#8585ad;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #8585ad;
+  font-size: 20px;
+  font-family: "Times New Roman", Times, serif;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 10px 10px;
+  text-decoration: none;
+}
+li a:hover {
+  background-color: #blue;
+}
+
+.active {
+  background-color: #b3d9ff;
 }
