--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ h2{
   font-size: 50px;
   letter-spacing: 1px;
   font-variant: small-caps;
-  background-image: url("coast.jpeg");
+  background-image: url("jelly.jpeg");
 }
 .current{
   color:#ffffff;
