--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@ h2{
   letter-spacing: 1px;
   font-variant: small-caps;
   background-image: url("jelly.jpeg");
+  background-size: contain;
 }
 .current{
   color:#ffffff;
