--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ h2{
   text-align: center;
 }
 .name {
-  color:#8585ad;
+  color:#ffffff;
   margin:auto;
   text-align: center;
   font-family:"Times New Roman", Times, serif;
