--- a/index.css
+++ b/index.css
@@ -18,7 +18,8 @@ h2{
   letter-spacing: 1px;
   font-variant: small-caps;
   background-image: url("jelly.jpeg");
-  background-size:cover;
+  background-size:auto;
+  background-repeat: no-repeat;
 }
 .current{
   color:#ffffff;
