--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body{
   color: #85a3e0;
   margin:auto;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Didact Gothic', Times, serif;
   font-size: 25px;
   letter-spacing: 1px;
   word-spacing: 2px
