--- a/index.css
+++ b/index.css
@@ -13,8 +13,8 @@ h2{
   color:#ffffff;
   margin:auto;
   text-align: center;
-  font-family:"Times New Roman", Times, serif;
-  font-size: 60px;
+  font-family:"Didact Gothic", Times, serif;
+  font-size: 50px;
   letter-spacing: 1px;
   font-variant: small-caps;
   background-image: url("jellies.jpeg");
