--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ h2{
   font-size: 50px;
   letter-spacing: 1px;
   font-variant: small-caps;
-  background-image: url("jellies.jpeg");
+  background-image: url("paint.jpeg");
   background-size:auto;
   background-repeat: no-repeat;
 }
