--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-  color: #85a3e0;
+  color: #404040;
   margin:auto;
   font-family: 'Didact Gothic', Times, serif;
   font-size: 25px;
@@ -22,7 +22,7 @@ h2{
   background-repeat: no-repeat;
 }
 .current{
-  color:#ffffff;
+  color:#404040;
   background-color: #85a3e0;
   text-align: justify;
   font-size: 20px;
