--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ h2{
 }
 .current{
   color:#404040;
-  background-color: #85a3e0;
+  background-color: #ffffff;
   text-align: justify;
   font-size: 20px;
 }
@@ -47,7 +47,7 @@ img{
 a:link, a:visited {
   background-color: white;
   color:#85a3e0;
-  border: 2px solid #85a3e0;
+  border: 3px solid #85a3e0;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -65,7 +65,7 @@ a:hover, a:active {
   color: #85a3e0;
   padding: 10px 20px;
   font-size: 20px;
-  border: 2px solid #85a3e0;
+  border: 3px solid #85a3e0;
   font-family:"Didact Gothic", Times, serif;
 
 }
