--- a/index.css
+++ b/index.css
@@ -46,8 +46,8 @@ img{
 }
 a:link, a:visited {
   background-color: white;
-  color:#85a3e0;
-  border: 1px solid #85a3e0;
+  color:#404040;
+  border: 1px solid #404040;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -56,16 +56,16 @@ a:link, a:visited {
 
 a:hover, a:active {
   color:#ffffff;
-  background-color:#85a3e0;
+  background-color:#404040;
 }
 
 
 .dropbtn {
   background-color: #ffffff;
-  color: #85a3e0;
+  color: #404040;
   padding: 10px 20px;
   font-size: 20px;
-  border: 1px solid #85a3e0;
+  border: 1px solid #404040;
   font-family:"Didact Gothic", Times, serif;
 
 }
@@ -78,24 +78,24 @@ a:hover, a:active {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #85a3e0;
+  background-color: #404040;
   min-width: 160px;
   z-index: 1;
 }
 
 .dropdown-content a {
-  color:#85a3e0 ;
+  color:#404040 ;
   padding: 10px 20px;
   text-decoration: none;
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #85a3e0;
+.dropdown-content a:hover {background-color: #404040;
 color: #ffffff}
 
 .dropdown:hover .dropdown-content {display: block;}
 
-.dropdown:hover .dropbtn {background-color: #85a3e0;
+.dropdown:hover .dropbtn {background-color: #404040;
   color: #ffffff
 }
 
@@ -104,7 +104,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #85a3e0;
+  background-color: #404040;
   font-size: 20px;
   font-family: "Didact Gothic", Times, serif;
   position: fixed;
