--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ h2{
   background-color: #ffffff;
   text-align: justify;
   font-size: 20px;
+  margin: 50px 20px;
 }
 .marine{
   text-shadow: 2px 2px 5px #000000;
