--- a/index.css
+++ b/index.css
@@ -132,3 +132,31 @@ li a:hover {
 .active {
   background-color: #b3d9ff;
 }
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.side {
+  flex: 30%;
+  background-color: #f1f1f1;
+  padding: 20px;
+  margin: 50px 20px;
+}
+.main {
+  flex: 70%;
+  background-color: white;
+  padding: 20px;
+  margin: 50px 20px;
+}
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin: 50px 20px;
+}
+@media screen and (max-width: 700px) {
+  .row, .navbar {
+    flex-direction: column;
+  }
+}
