--- a/index.css
+++ b/index.css
@@ -120,7 +120,8 @@ li a:hover {
     width: 30px;
     text-align: center;
     text-decoration: none;
-    border-radius: 80%;
+    margin: 5px 2px;
+    border-radius: 50%;
   }
 .fa:hover {
   opacity: 0.7;
