--- a/index.css
+++ b/index.css
@@ -96,12 +96,14 @@ li a:hover {
   flex: 30%;
   background-color: #f1f1f1;
   padding: 20px;
+  font-size: 20px;
 
 }
 .main {
   flex: 70%;
   background-color: white;
   padding: 20px;
+  font-size: 20px;
 }
 .footer {
   padding: 10px;
