--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ h2{
 }
 img{
   display: block;
-  align-items: auto;
+  align-items: center;
   border-radius: 85px;
   width: 65px;
   height:65px;
