--- a/index.css
+++ b/index.css
@@ -32,8 +32,8 @@ img{
   display: block;
   align-items: center;
   border-radius: 85px;
-  width: 65px;
-  height:65px;
+  width: 30%;
+  height:30%;
 }
 
 .a{
