--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ li a:hover {
   flex: 30%;
   background-color: #f1f1f1;
   padding: 20px;
-  margin: auto;
+  margin: 50px 20px;
   font-size: 20px;
   text-align: center;
 }
