--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ h2{
   margin: 50px 20px;
 }
 img{
-  display: block;
+  display: flex;
   align-items: center;
   border-radius: 85px;
   width: 30%;
