--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ h2{
 .current{
   color:#737373;
   background-color: #ffffff;
-  text-align: left;
+  text-align: center;
   font-size: 20px;
   margin: 50px 20px;
 }
