--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ h2{
   background-color: #ffffff;
   text-align: center;
   font-size: 20px;
-  margin: 50px 20px;
+  margin: 60%;
 }
 img{
   display: flex;
