--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ li a:hover {
   flex: 30%;
   background-color: #f1f1f1;
   padding: 20px;
-  margin: 50px 20px;
+  margin: 25px;
   font-size: 20px;
   text-align: center;
 }
@@ -106,6 +106,7 @@ li a:hover {
   background-color: white;
   padding: 20px;
   font-size: 20px;
+  margin: 25px;
   text-align: justify;
 }
 .footer {
