--- a/index.css
+++ b/index.css
@@ -89,10 +89,11 @@ li a:hover {
 .side {
   flex: 30%;
   background-color: #f1f1f1;
-  padding: 20px;
+  padding: 10px;
   margin: 25px;
   font-size: 20px;
   text-align: center;
+  width:auto;
 }
 
 .main {
