--- a/index.css
+++ b/index.css
@@ -114,23 +114,14 @@ li a:hover {
   margin: 50px 20px;
   font-size: 20px;
 }
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 30px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 50%;
-  }
 .fa:hover {
   opacity: 0.7;
 }
-.fa-facebook {
+.fa fa-facebook {
   background: #3B5998;
   color: white;
 }
-.fa-linkedin {
+.fa fa-linkedin {
   background: #007bb5;
   color: white;
 }
