--- a/index.css
+++ b/index.css
@@ -36,6 +36,13 @@ img{
 .b{
   text-decoration: underline;
 }
+b:link, a:visited{
+  background-color: inherit;
+  text-decoration: underline;
+}
+b.hover, b:active{
+  color: #d6e0f5;
+}
 .a{
   font-size: 20px;
   text-align: justify;
@@ -116,14 +123,23 @@ li a:hover {
   margin: 50px 20px;
   font-size: 20px;
 }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
 .fa:hover {
   opacity: 0.7;
 }
-.fa fa-facebook {
+.fa-facebook {
   background: #3B5998;
   color: white;
 }
-.fa fa-linkedin {
+.fa-linkedin {
   background: #007bb5;
   color: white;
 }
