--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ li a {
 .footer {
   padding: 10px;
   text-align: center;
-  background: #d6e0f5;
+  background: #d9d9d9;
   border-style:solid;
   border-color: #737373;
   border-width: 5px;
