--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ li a {
 .footer {
   padding: 10px;
   text-align: center;
-  background: #d9d9d9;
+  background: #e6e6e6;
   border-style:solid;
   border-color: #737373;
   border-width: 5px;
