--- a/experiences.css
+++ b/experiences.css
@@ -21,6 +21,9 @@ h2{
   background-size:auto;
   background-repeat: no-repeat;
 }
+.buttons{
+  
+}
 .a{
   font-size: 20px;
   text-align: justify;
