--- a/aboutme.css
+++ b/aboutme.css
@@ -1,35 +1,38 @@
 body{
-  color: #85a3e0;
+  color: #737373;
   margin:auto;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Didact Gothic', Times, serif;
   font-size: 25px;
   letter-spacing: 1px;
-  word-spacing: 2px;
+  word-spacing: 2px
+}
+h2{
+  text-align: center;
+}
+.name {
+  color:#ffffff;
+  margin:auto;
+  text-align: center;
+  font-family:"Didact Gothic", Times, serif;
+  font-size: 50px;
+  letter-spacing: 1px;
+  font-variant: small-caps;
+  background-image: url("paint.jpeg");
+  background-size:auto;
+  background-repeat: no-repeat;
+}
+.buttons{
+
 }
 .a{
   font-size: 20px;
-  text-align: center;
+  text-align: justify;
   margin: 20px;
 }
-img{
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  align-items: center;
-  border-radius: 100px;
-  width: 250px;
-  height: auto;
-
-}
-.title{
-  text-decoration: underline;
-
-}
-
 a:link, a:visited {
   background-color: white;
-  color:#85a3e0;
-  border: 2px solid #85a3e0;
+  color:#737373;
+  border: 2px solid #737373;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
@@ -38,16 +41,17 @@ a:link, a:visited {
 
 a:hover, a:active {
   color:#ffffff;
-  background-color:#85a3e0;
+  background-color:#737373;
 }
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #85a3e0;
+  background-color: #737373;
   font-size: 20px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Didact Gothic", Times, serif;
   position: fixed;
   top: 0;
   width: 100%;
@@ -64,10 +68,37 @@ li a {
   padding: 10px 10px;
   text-decoration: none;
 }
-li a:hover {
-  background-color: #blue;
+.footer {
+  padding: 10px;
+  text-align: center;
+  background: #e6e6e6;
+  border-style:solid;
+  border-color: #737373;
+  border-width: 5px;
+  margin: 50px 20px;
+  font-size: 20px;
 }
-
-.active {
-  background-color: #b3d9ff;
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 10px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
 }
