--- a/experiences.css
+++ b/experiences.css
@@ -26,12 +26,12 @@ h2{
   margin:auto;
   text-align: center;
   font-family:"Didact Gothic", Times, serif;
-  font-size: 50px;
+  font-size: 30px;
   letter-spacing: 1px;
   font-variant: small-caps;
   background-image: url("IMG_3389.JPG");
   background-size:auto;
-  background-repeat: no-repeat
+  background-repeat: no-repeat;
 }
 .a{
   font-size: 20px;
