--- a/experiences.css
+++ b/experiences.css
@@ -22,7 +22,7 @@ h2{
   background-repeat: no-repeat;
 }
 .button1{
-  color:#ffffff;
+  color:##737373;
   margin:auto;
   text-align: center;
   font-family:"Didact Gothic", Times, serif;
